<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_all_cocktails">

    <fragment
        android:id="@+id/navigation_all_cocktails"
        android:name="com.example.cocktails.view.fragments.AllCocktailsFragment"
        android:label="@string/title_all_cocktails"
        tools:layout="@layout/fragment_all_cocktails" />

    <fragment
        android:id="@+id/navigation_favorite_cocktails"
        android:name="com.example.cocktails.view.fragments.FavoriteCocktailsFragment"
        android:label="@string/title_favorite_cocktails"
        tools:layout="@layout/fragment_favorite_cocktails" />

    <fragment
        android:id="@+id/navigation_explore_cocktails"
        android:name="com.example.cocktails.view.fragments.ExploreCocktailsFragment"
        android:label="@string/title_explore_cocktails"
        tools:layout="@layout/fragment_explore_cocktails" />
</navigation>