<?xml version="1.0" encoding="utf-8"?>
<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".view.fragments.CocktailDetailsFragment">-->

<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:gravity="center"-->
<!--        android:text="Fragment Cocktail Details" />-->

<!--</FrameLayout>-->


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_cocktail_detail_main"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".view.fragments.CocktailDetailsFragment"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:id="@+id/fl_cocktail_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_cocktail_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:background="@color/dish_image_background"
            android:contentDescription="@string/image_contentDescription"
            android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/favorite_button_background"
                android:elevation="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/iv_favorite_cocktail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image_contentDescription"
                    android:src="@drawable/ic_favorite_unselected" />
            </LinearLayout>
        </FrameLayout>
            <TextView
                android:id="@+id/tv_date_modified"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fl_cocktail_image"
                android:textColor="@color/gunmetal"
                android:layout_margin="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                tools:text="14/04/2022 21:43:32"
                />

        <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_date_modified"
        android:layout_margin="@dimen/_10sdp"
        android:textColor="@color/ceitic_blue"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        tools:text="Cocktail Title" />

        <TextView
            android:id="@+id/tv_alcoholic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textColor="@color/gunmetal"
            android:textSize="@dimen/_16sdp"
            tools:text="Alcoholic" />

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_alcoholic"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textColor="@color/gunmetal"
            android:textSize="@dimen/_16sdp"
            tools:text="Category" />

        <TextView
            android:id="@+id/tv_glass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_category"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textColor="@color/gunmetal"
            android:textSize="@dimen/_16sdp"
            tools:text="Glass" />

        <TextView
            android:id="@+id/tv_ingredients_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_glass"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/lbl_ingredients"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/ceitic_blue"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_ingredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gunmetal"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_below="@id/tv_ingredients_label"
            android:textSize="@dimen/_14sdp"
            tools:text="Ingredients Value" />

        <TextView
            android:id="@+id/tv_instruction_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_ingredients"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/lbl_instructions"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/ceitic_blue"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gunmetal"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_below="@id/tv_instruction_label"
            android:textSize="@dimen/_14sdp"
            tools:text="Instruction Value" />

        <TextView
            android:id="@+id/tv_measure_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_instruction"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/lbl_measures"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/ceitic_blue"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_measure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gunmetal"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_below="@id/tv_measure_label"
            android:textSize="@dimen/_14sdp"
            tools:text="Measure Value" />
    </RelativeLayout>
</ScrollView>